--- a/paper/Permutations.lagda.tex
+++ b/paper/Permutations.lagda.tex
@@ -9,7 +9,7 @@ open import Context
 \end{code}
 
 \subsection{Context Permutations}
-\label{sec:permutation-agda}
+\label{sec:permutations-agda}
 
 \begin{code}
 data _#_ : Context → Context → Set where
