--- a/paper/Permutations.tex
+++ b/paper/Permutations.tex
@@ -48,7 +48,7 @@
 \end{code}
 
 \subsection{Context Permutations}
-\label{sec:permutation-agda}
+\label{sec:permutations-agda}
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
