--- a/paper/Process.tex
+++ b/paper/Process.tex
@@ -349,7 +349,7 @@ Note that $B$ is prepended in front of $A$, somewhat implying that the second
 continuation is bound \emph{after} the first even though, from a technical
 standpoint, both continuations are bound simultaneously. We could have prepended
 the types $A$ and $B$ also in the opposite order, provided that the reduction
-rule \RFork (formalized in \Cref{sec:semantics-agda}) is suitably adjusted.
+rule \RFork (formalized in \Cref{sec:reduction-agda}) is suitably adjusted.
 
 \begin{code}%
 %
