--- a/paper/main.bib
+++ b/paper/main.bib
@@ -7,6 +7,34 @@
 % 3. REMOVE THE url, timestamp, biburl and bibsource ITEMS FROM THE ENTRY
 % 4. REMOVE THE \ IN FRONT OF _ THIS ESCAPE SEQUENCE IS NOT NECESSARY ANY MORE
 
+@inproceedings{CarboneEtAl24,
+  author       = {Marco Carbone and
+                  David Castro{-}Perez and
+                  Francisco Ferreira and
+                  Lorenzo Gheri and
+                  Frederik Krogsdal Jacobsen and
+                  Alberto Momigliano and
+                  Luca Padovani and
+                  Alceste Scalas and
+                  Dawit Legesse Tirore and
+                  Martin Vassor and
+                  Nobuko Yoshida and
+                  Daniel Zackon},
+  editor       = {Ilaria Castellani and
+                  Francesco Tiezzi},
+  title        = {The Concurrent Calculi Formalisation Benchmark},
+  booktitle    = {Coordination Models and Languages - 26th {IFIP} {WG} 6.1 International
+                  Conference, {COORDINATION} 2024, Held as Part of the 19th International
+                  Federated Conference on Distributed Computing Techniques, DisCoTec
+                  2024, Groningen, The Netherlands, June 17-21, 2024, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14676},
+  pages        = {149--158},
+  publisher    = {Springer},
+  year         = {2024},
+  doi          = {10.1007/978-3-031-62697-5\_9},
+}
+
 @book{GayVasconcelos25,
   title={Session Types},
   author={Gay, Simon J. and Vasconcelos, Vasco T.},
