--- a/paper/DeadlockFreedom.lagda.tex
+++ b/paper/DeadlockFreedom.lagda.tex
@@ -1,4 +1,16 @@
-\begin{code}
+\subsection{Deadlock Freedom}
+\label{sec:deadlock-freedom-agda}
+
+As we have seen in \Cref{sec:calculus}, the deadlock freedom result
+(\Cref{thm:df}) rests on some notions and predicates about processes which we
+now formalize in Agda. First of all we need to distinguish \emph{threads} from
+\emph{cuts}. As it turns out, in the formalization it is convenient to provide
+an even more fine-grained classification of threads, distinguishing between
+links, input/output actions on linear/shared channels, and sometimes also
+whether such actions operate on free or bound channels. We define predicates for
+each of these process classes:
+
+\begin{code}[hide]
 open import Data.Sum
 open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
 open import Data.Bool using (Bool; true; false; if_then_else_)
@@ -8,27 +20,60 @@ open import Relation.Binary.PropositionalEquality using (refl)
 
 open import Type
 open import Context
+open import Permutations
 open import Process
 open import Reduction
 open import Congruence
-open import Permutations
+\end{code}
 
-data Cut {Γ} : Process Γ → Set where
+\begin{code}
+data Cut            : ∀{Γ} → Process Γ → Set
+data Link           : ∀{Γ} → Process Γ → Set
+data Input          : ∀{Γ} → Process Γ → Set
+data Output         : ∀{Γ} → Process Γ → Set
+data Delayed        : ∀{Γ} → Process Γ → Set
+data Client         : ∀{Γ} → Process Γ → Set
+data Server         : ∀{Γ} → Process Γ → Set
+data DelayedServer  : ∀{Γ} → Process Γ → Set
+\end{code}
+
+These predicates are relatively uninteresting since they are essentially
+isomorphic to the relevant parts of the \AgdaDatatype{Process} datatype. The
+only remarkable aspect is that \AgdaDatatype{Input}, \AgdaDatatype{Output},
+\AgdaDatatype{Client} and \AgdaDatatype{Server} the channel being acted upon by
+the thread is the \emph{first} in $\Context$, hence it is the \emph{most
+recently introduced} channel, whereas in \AgdaDatatype{Delayed} and
+\AgdaDatatype{DelayedServer} the channel is older. This allows us to distinguish
+those threads that, in the context of a cut, operate on the channel bound by the
+cut or on a free channel. As an illustration, consider the
+\AgdaInductiveConstructor{wait} case in \AgdaDatatype{Input} and in
+\AgdaDatatype{Delayed}. In the former predicate we have
+
+\begin{AgdaAlign}
+\begin{code}[hide]
+data Cut where
   cut :
-    ∀{Γ₁ Γ₂ A B} (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂)
+    ∀{Γ Γ₁ Γ₂ A B} (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂)
     {P : Process (A ∷ Γ₁)} {Q : Process (B ∷ Γ₂)} →
     Cut (cut d p P Q)
 
-data Link {Γ} : Process Γ → Set where
+data Link where
   link :
-    ∀{A B} (d : Dual A B) (p : Γ ≃ [ A ] + [ B ]) → Link (link d p)
+    ∀{Γ A B} (d : Dual A B) (p : Γ ≃ [ A ] + [ B ]) → Link (link d p)
 
-data Input : ∀{Γ} → Process Γ → Set where
+data Input where
   fail :
     ∀{Γ Δ}
     (p : Γ ≃ [] + Δ) → Input (fail (split-l p))
-  wait :
-    ∀{Γ Δ} (p : Γ ≃ [] + Δ) {P : Process Δ} → Input (wait (split-l p) P)
+\end{code}
+
+\begin{code}
+  wait : ∀{Γ Δ} (p : Γ ≃ [] + Δ) {P : Process Δ} → Input (wait (split-l p) P)
+\end{code}
+where the \AgdaInductiveConstructor{split-l} constructor indicates that the
+thread operates on the most recent channel. In the latter predicate we have
+
+\begin{code}[hide]
   case :
     ∀{Γ Δ A B} (p : Γ ≃ [] + Δ) {P : Process (A ∷ Δ)} {Q : Process (B ∷ Δ)} →
     Input (case (split-l p) P Q)
@@ -36,7 +81,7 @@ data Input : ∀{Γ} → Process Γ → Set where
     ∀{Γ Δ A B} (p : Γ ≃ [] + Δ) {P : Process (B ∷ A ∷ Δ)} →
     Input (join (split-l p) P)
 
-data Client : ∀{Γ} → Process Γ → Set where
+data Client where
   client :
     ∀{Γ Δ A} (p : Γ ≃ [] + Δ)
     {P : Process (A ∷ Δ)} →
@@ -50,7 +95,7 @@ data Client : ∀{Γ} → Process Γ → Set where
     {P : Process (¿ A ∷ ¿ A ∷ Δ)} →
     Client (contract (split-l p) P)
 
-data Output : ∀{Γ} → Process Γ → Set where
+data Output where
   close : Output close
   select :
     ∀{Γ Δ A B} (x : Bool) (p : Γ ≃ [] + Δ) {P : Process ((if x then A else B) ∷ Δ)} →
@@ -60,12 +105,20 @@ data Output : ∀{Γ} → Process Γ → Set where
     {P : Process (A ∷ Δ₁)} {Q : Process (B ∷ Δ₂)} →
     Output (fork (split-l p) q P Q)
 
-data Delayed : ∀{Γ} → Process Γ → Set where
+data Delayed where
   fail :
     ∀{A Γ Δ}
     (p : Γ ≃ ⊤ , Δ) → Delayed (fail (split-r {A} p))
-  wait :
-    ∀{C Γ Δ} (p : Γ ≃ ⊥ , Δ) {P : Process (C ∷ Δ)} → Delayed (wait (split-r p) P)
+\end{code}
+
+\begin{code}
+  wait : ∀{C Γ Δ} (p : Γ ≃ ⊥ , Δ) {P : Process (C ∷ Δ)} →
+         Delayed (wait (split-r p) P)
+\end{code}
+where the \AgdaInductiveConstructor{split-r} constructor indicates that the
+thread operates on a channel other than the most recent one.
+
+\begin{code}[hide]
   case :
     ∀{Γ Δ C A B} (p : Γ ≃ A & B , Δ) {P : Process (A ∷ C ∷ Δ)} {Q : Process (B ∷ C ∷ Δ)} →
     Delayed (case (split-r p) P Q)
@@ -93,19 +146,41 @@ data Delayed : ∀{Γ} → Process Γ → Set where
     ∀{Γ Δ A C} (p : Γ ≃ ¿ A , Δ) {P : Process (¿ A ∷ ¿ A ∷ C ∷ Δ)} →
     Delayed (contract (split-r p) P)
 
-data Server : ∀{Γ} → Process Γ → Set where
+data Server where
   server :
     ∀{Γ Δ A} (p : Γ ≃ [] + Δ) (un : Un Δ) {P : Process (A ∷ Δ)} →
     Server (server (split-l p) un P)
 
-data DelayedServer : ∀{Γ} → Process Γ → Set where
+data DelayedServer where
   server :
     ∀{Γ Δ A C} (p : Γ ≃ ¡ A , Δ) (un : Un Δ) {P : Process (A ∷ ¿ C ∷ Δ)} →
     DelayedServer (server (split-r p) (un-∷ un) P)
+\end{code}
+\end{AgdaAlign}
 
+Now the \AgdaDatatype{Thread} predicate is simply the disjunction of all the
+previous ones.
+
+\begin{code}
 Thread : ∀{Γ} → Process Γ → Set
-Thread P = Link P ⊎ Delayed P ⊎ Output P ⊎ Input P ⊎ Client P ⊎ Server P ⊎ DelayedServer P
+Thread P = Link P ⊎ Delayed P ⊎ Output P ⊎ Input P ⊎
+           Client P ⊎ Server P ⊎ DelayedServer P
+\end{code}
 
+We can now define observability, reducibility and aliveness in the expected way:
+
+\begin{code}
+Observable : ∀{Γ} → Process Γ → Set
+Observable P = ∃[ Q ] P ⊒ Q × Thread Q
+
+Reducible : ∀{Γ} → Process Γ → Set
+Reducible P = ∃[ Q ] P ↝ Q
+
+Alive : ∀{Γ} → Process Γ → Set
+Alive P = Observable P ⊎ Reducible P
+\end{code}
+
+\begin{code}[hide]
 link-thread : ∀{Γ A B} (d : Dual A B) (p : Γ ≃ [ A ] + [ B ]) → Thread (link d p)
 link-thread d p = inj₁ (link d p)
 
@@ -172,7 +247,15 @@ server-thread :
   Thread (server p un P)
 server-thread (split-l p) un = inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₁ (server p un))))))
 server-thread (split-r p) (un-∷ un) = inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (server p un))))))
+\end{code}
 
+In order to prove that every (well-typed) process is alive, it is convenient to
+also define a ``canonical'' form for cuts, which is a form that matches at least
+one of the left-hand-sides of the rules for structural pre-congruence or
+reduction (\Cref{tab:semantics}). This is the notion where the fine-grained
+classification of threads introduced earlier comes into play.
+
+\begin{code}
 data CanonicalCut {Γ} : Process Γ → Set where
   cc-link :
     ∀{Γ₁ Γ₂ A B} (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂)
@@ -194,7 +277,20 @@ data CanonicalCut {Γ} : Process Γ → Set where
     ∀{Γ₁ Γ₂ A B} (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂)
     {P : Process (A ∷ Γ₁)} {Q : Process (B ∷ Γ₂)} →
     Server P → Client Q → CanonicalCut (cut d p P Q)
+\end{code}
 
+A \emph{canonical cut} $\Cut\x{P}{Q}$ has one of these forms:
+\begin{itemize}
+\item $P$ is a link (\AgdaInductiveConstructor{cc-link}), or
+\item $P$ operates on a channel other than $x$ and is not a server
+(\AgdaInductiveConstructor{cc-delayed}), or
+\item $P$ and $Q$ are servers and $P$ operates on a channel other than $x$
+(\AgdaInductiveConstructor{cc-delayed-server}), or
+\item $P$ performs an output on $x$ and $Q$ performs an input on $x$
+(\AgdaInductiveConstructor{cc-redex} and \AgdaInductiveConstructor{cc-connect}).
+\end{itemize}
+
+\begin{code}[hide]
 output-output :
   ∀{Γ Δ A B} {P : Process (A ∷ Γ)} {Q : Process (B ∷ Δ)} → Dual A B → ¬ (Output P × Output Q)
 output-output d-𝟙-⊥ (close , ())
@@ -242,13 +338,19 @@ server-server () (server p un , server p₁ un₁)
 delayed-server-delayed-served :
   ∀{Γ Δ A B} {P : Process (A ∷ Γ)} {Q : Process (B ∷ Δ)} → Dual A B → ¬ (DelayedServer P × DelayedServer Q)
 delayed-server-delayed-served () (server p un , server p₁ un₁)
+\end{code}
 
+Every cut $\Cut\x{P}{Q}$ where both $P$ and $Q$ are threads can be rewritten
+into a canonical cut using structural pre-congruence:
+
+\begin{code}
 canonical-cut :
-  ∀{Γ Γ₁ Γ₂ A B}
-  {P : Process (A ∷ Γ₁)} {Q : Process (B ∷ Γ₂)}
+  ∀{Γ Γ₁ Γ₂ A B} {P : Process (A ∷ Γ₁)} {Q : Process (B ∷ Γ₂)}
   (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂) →
-  Thread P → Thread Q →
-  ∃[ R ] CanonicalCut R × cut d p P Q ⊒ R
+  Thread P → Thread Q → ∃[ R ] CanonicalCut R × cut d p P Q ⊒ R
+\end{code}
+
+\begin{code}[hide]
 canonical-cut dc pc (inj₁ x) Qt = _ , cc-link dc pc x , s-refl
 canonical-cut dc pc (inj₂ x) (inj₁ y) = _ , cc-link (dual-symm dc) (+-comm pc) y , s-comm dc pc
 canonical-cut dc pc (inj₂ (inj₁ x)) (inj₂ y) = _ , cc-delayed dc pc x , s-refl
@@ -279,103 +381,110 @@ canonical-cut dc pc (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₁ x)))))) (inj
 canonical-cut dc pc (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ x)))))) (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₁ y)))))) = _ , cc-delayed-server dc pc x y , s-refl
 canonical-cut dc pc (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ x)))))) (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ (inj₂ y)))))) = contradiction (x , y) (delayed-server-delayed-served dc)
 
-Observable : ∀{Γ} → Process Γ → Set
-Observable P = ∃[ Q ] P ⊒ Q × Thread Q
+⊒Alive : ∀{Γ} {P Q : Process Γ} → P ⊒ Q → Alive Q → Alive P
+⊒Alive pcong (inj₁ (_ , x , th)) = inj₁ (_ , s-tran pcong x , th)
+⊒Alive pcong (inj₂ (_ , red)) = inj₂ (_ , r-cong pcong red)
+\end{code}
 
-Live : ∀{Γ} → Process Γ → Set
-Live P = Observable P ⊎ Reducible P
+It is easy to prove that every canonical cut is alive, either reducing it or
+applying structural pre-congruence to rewrite it into a thread.
 
-DeadlockFree : ∀{Γ} → Process Γ → Set
-DeadlockFree {Γ} P = ∀(Q : Process Γ) → P ⇒ Q → Live Q
+\begin{code}
+canonical-cut-alive : ∀{Γ} {P : Process Γ} → CanonicalCut P → Alive P
+\end{code}
 
-⊒Live : ∀{Γ} {P Q : Process Γ} → P ⊒ Q → Live Q → Live P
-⊒Live pcong (inj₁ (_ , x , th)) = inj₁ (_ , s-tran pcong x , th)
-⊒Live pcong (inj₂ (_ , red)) = inj₂ (_ , r-cong pcong red)
-
-live-cut : ∀{Γ} {P : Process Γ} → CanonicalCut P → Live P
-live-cut (cc-link d p (link e (split-l (split-r split-e)))) with dual-fun-r e d
+\begin{code}[hide]
+canonical-cut-alive (cc-link d p (link e (split-l (split-r split-e)))) with dual-fun-r e d
 ... | refl = inj₂ (_ , r-link d e p)
-live-cut (cc-link d p (link e (split-r (split-l split-e)))) with dual-fun-l e (dual-symm d)
+canonical-cut-alive (cc-link d p (link e (split-r (split-l split-e)))) with dual-fun-l e (dual-symm d)
 ... | refl = inj₂ (_ , r-cong (s-cong d p (s-link e (split-r (split-l split-e))) s-refl) (r-link d (dual-symm e) p))
-live-cut (cc-redex d-𝟙-⊥ p close (wait q)) with +-empty-l p | +-empty-l q
+canonical-cut-alive (cc-redex d-𝟙-⊥ p close (wait q)) with +-empty-l p | +-empty-l q
 ... | refl | refl = inj₂ (_ , r-close p q)
-live-cut (cc-redex (d-⊕-& d e) p (select false q) (case r)) with +-empty-l q | +-empty-l r
+canonical-cut-alive (cc-redex (d-⊕-& d e) p (select false q) (case r)) with +-empty-l q | +-empty-l r
 ... | refl | refl = inj₂ (_ , r-select-r d e p q r)
-live-cut (cc-redex (d-⊕-& d e) p (select true q) (case r)) with +-empty-l q | +-empty-l r
+canonical-cut-alive (cc-redex (d-⊕-& d e) p (select true q) (case r)) with +-empty-l q | +-empty-l r
 ... | refl | refl = inj₂ (_ , r-select-l d e p q r)
-live-cut (cc-redex (d-⊗-⅋ d e) p (fork q r) (join s)) with +-empty-l q | +-empty-l s
+canonical-cut-alive (cc-redex (d-⊗-⅋ d e) p (fork q r) (join s)) with +-empty-l q | +-empty-l s
 ... | refl | refl = inj₂ (_ , r-fork d e p s r q)
-live-cut (cc-connect (d-!-? d) p (server q un) (client r)) with +-empty-l q | +-empty-l r
+canonical-cut-alive (cc-connect (d-!-? d) p (server q un) (client r)) with +-empty-l q | +-empty-l r
 ... | refl | refl = inj₂ (_ , r-client d p q r un)
-live-cut (cc-connect (d-!-? d) p (server q un) (weaken r)) with +-empty-l q | +-empty-l r
+canonical-cut-alive (cc-connect (d-!-? d) p (server q un) (weaken r)) with +-empty-l q | +-empty-l r
 ... | refl | refl = inj₂ (_ , r-weaken d p q r un)
-live-cut (cc-connect (d-!-? d) p (server q un) (contract r)) with +-empty-l q | +-empty-l r
+canonical-cut-alive (cc-connect (d-!-? d) p (server q un) (contract r)) with +-empty-l q | +-empty-l r
 ... | refl | refl = inj₂ (_ , r-contract d p q r un)
-live-cut (cc-delayed d p (wait q)) =
+canonical-cut-alive (cc-delayed d p (wait q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-wait d p q , wait-thread q′)
-live-cut (cc-delayed d p (case q)) =
+canonical-cut-alive (cc-delayed d p (case q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-case d p q , case-thread q′)
-live-cut (cc-delayed d p (join q)) =
+canonical-cut-alive (cc-delayed d p (join q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-join d p q , join-thread q′)
-live-cut (cc-delayed d p (select false q)) =
+canonical-cut-alive (cc-delayed d p (select false q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-select-r d p q , select-thread false q′)
-live-cut (cc-delayed d p (select true q)) =
+canonical-cut-alive (cc-delayed d p (select true q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-select-l d p q , select-thread true q′)
-live-cut (cc-delayed d p (fork-l q r)) =
+canonical-cut-alive (cc-delayed d p (fork-l q r)) =
   let _ , p′ , q′ = +-assoc-l p q in
   let _ , p′′ , r′ = +-assoc-l p′ r in
   let _ , q′′ , r′′ = +-assoc-r r′ (+-comm p′′) in
   inj₁ (_ , s-fork-l d p q r , fork-thread q′ r′′)
-live-cut (cc-delayed d p (fork-r q r)) =
+canonical-cut-alive (cc-delayed d p (fork-r q r)) =
   let _ , p′ , q′ = +-assoc-l p q in
   let _ , p′′ , r′ = +-assoc-l p′ r in
   inj₁ (_ , s-fork-r d p q r , fork-thread q′ r′)
-live-cut (cc-delayed d p (fail q)) =
+canonical-cut-alive (cc-delayed d p (fail q)) =
   let _ , p′ , q′ = +-assoc-l p q in
   inj₁ (_ , s-fail d p q , fail-thread q′)
-live-cut (cc-delayed d p (client q)) =
+canonical-cut-alive (cc-delayed d p (client q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-client d p q , client-thread q′)
-live-cut (cc-delayed d p (weaken q)) =
+canonical-cut-alive (cc-delayed d p (weaken q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-weaken d p q , weaken-thread q′)
-live-cut (cc-delayed d p (contract q)) =
+canonical-cut-alive (cc-delayed d p (contract q)) =
   let _ , _ , q′ = +-assoc-l p q in
   inj₁ (_ , s-contract d p q , contract-thread q′)
-live-cut (cc-delayed-server (d-?-! d) p (server q un) (server r un′)) with +-empty-l r
+canonical-cut-alive (cc-delayed-server (d-?-! d) p (server q un) (server r un′)) with +-empty-l r
 ... | refl =
   let _ , p′ , q′ = +-assoc-l p q in
   inj₁ (_ , s-server d p q r un un′ , server-thread q′ (#un+ p′ un un′))
+\end{code}
 
-live : ∀{Γ} (P : Process Γ) → Live P
-\end{code}
-\begin{code}[hide]
-live (link d p) = inj₁ (_ , s-refl , link-thread d p)
-live (fail p) = inj₁ (_ , s-refl , fail-thread p)
-live close = inj₁ (_ , s-refl , close-thread)
-live (wait p P) = inj₁ (_ , s-refl , wait-thread p)
-live (select x p P) = inj₁ (_ , s-refl , select-thread x p)
-live (case p P Q) = inj₁ (_ , s-refl , case-thread p)
-live (fork p q P Q) = inj₁ (_ , s-refl , fork-thread p q)
-live (join p P) = inj₁ (_ , s-refl , join-thread p)
-live (server p un P) = inj₁ (_ , s-refl , server-thread p un)
-live (client p P) = inj₁ (_ , s-refl , client-thread p)
-live (weaken p P) = inj₁ (_ , s-refl , weaken-thread p)
-live (contract p P) = inj₁ (_ , s-refl , contract-thread p)
-live (cut d p P Q) with live P
-... | inj₂ (_ , red) = inj₂ (_ , r-cut d p red)
-... | inj₁ (_ , Pc , Pt) with live Q
-... | inj₂ (_ , red) = inj₂ (_ , r-cong (s-comm d p) (r-cut (dual-symm d) (+-comm p) red))
-... | inj₁ (_ , Qc , Qt) with canonical-cut d p Pt Qt
-... | _ , cc , pcong = ⊒Live (s-tran (s-cong d p Pc Qc) pcong) (live-cut cc)
-\end{code}
+Now deadlock freedom for $P$ can be proved by induction on $P$.
 
 \begin{code}
-deadlock-freedom : ∀{Γ} (P : Process Γ) → DeadlockFree P
-deadlock-freedom P Q reds = live Q
+deadlock-freedom : ∀{Γ} (P : Process Γ) → Alive P
+\end{code}
+
+When $P$ is a thread, then it is obviously observable and hence alive. When $P$
+is a cut $\Cut\x{P}{Q}$, \AgdaFunction{deadlock-freedom} is applied recursively
+on $P$ and $Q$. If either of these applications yields a reduction, then the
+whole cut is reducible and therefore alive. If both applications yield a thread,
+then we conclude that the cut is alive first rewriting it into a canonical cut
+(\AgdaFunction{canonical-cut}) and then using
+\AgdaFunction{canonical-cut-alive}.
+
+\begin{code}[hide]
+deadlock-freedom (link d p) = inj₁ (_ , s-refl , link-thread d p)
+deadlock-freedom (fail p) = inj₁ (_ , s-refl , fail-thread p)
+deadlock-freedom close = inj₁ (_ , s-refl , close-thread)
+deadlock-freedom (wait p P) = inj₁ (_ , s-refl , wait-thread p)
+deadlock-freedom (select x p P) = inj₁ (_ , s-refl , select-thread x p)
+deadlock-freedom (case p P Q) = inj₁ (_ , s-refl , case-thread p)
+deadlock-freedom (fork p q P Q) = inj₁ (_ , s-refl , fork-thread p q)
+deadlock-freedom (join p P) = inj₁ (_ , s-refl , join-thread p)
+deadlock-freedom (server p un P) = inj₁ (_ , s-refl , server-thread p un)
+deadlock-freedom (client p P) = inj₁ (_ , s-refl , client-thread p)
+deadlock-freedom (weaken p P) = inj₁ (_ , s-refl , weaken-thread p)
+deadlock-freedom (contract p P) = inj₁ (_ , s-refl , contract-thread p)
+deadlock-freedom (cut d p P Q) with deadlock-freedom P
+... | inj₂ (_ , red) = inj₂ (_ , r-cut d p red)
+... | inj₁ (_ , Pc , Pt) with deadlock-freedom Q
+... | inj₂ (_ , red) = inj₂ (_ , r-cong (s-comm d p) (r-cut (dual-symm d) (+-comm p) red))
+... | inj₁ (_ , Qc , Qt) with canonical-cut d p Pt Qt
+... | _ , cc , pcong = ⊒Alive (s-tran (s-cong d p Pc Qc) pcong) (canonical-cut-alive cc)
 \end{code}
